# utimezone

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package.json  pyproject.toml
src/: main.py
src/utimezone/: __init__.py  db.py  dst_rule.py  timezone.py  transition_rule.py  utils.py  zones.csv
tests/: conftest.py  test_database_load.py  test_epoch_helpers.py  test_fuzz_randomized.py  test_iso8601.py  test_memory_usage.py  test_strange_timezone.py  test_timezone_formation.py  test_timezone_public_api.py  test_transition_edges.py  test_transition_rule_formats.py
