[project]
name = "utimezone"
version = "0.1.0"
description = "Micropython Compatible Timezone Helpers"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/utimezone"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
